k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shadow-payment
  labels:
    app: shadow-payment
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shadow-payment
      version: v1
  template:
    metadata:
      labels:
        app: shadow-payment
        version: v1
    spec:
      containers:
      - name: payment-service
        image: 974066991644.dkr.ecr.us-east-1.amazonaws.com/mission-shadow:v1
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
